--- a/index.html
+++ b/index.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>Informatics 212 Web Development</title>
+    <title>Mardrika's Family</title>
+
+      <header><h1><em>Meet Mardrika's Family</em></h1></header>
   </head>
-  <body>
-  <h1>INFM212</h1> <br> <h2>Mardrika Webster</h2> <br>
-  <h3>Contact</h3>
-  <h4>Mardrika.webster@live.mercer.edu <br>https://mardrikawebster.blogspot.com/</h4>
-  <img src="me.jpg" alt="Mardrika Webster" width="15%">
+ <section>
+   <body>
+     <header role="navigation">
+     <main role="main"
+     <ul>
+       <li><a href="Home\index.html">Home</a></li>
+       <li><a href="Shiletha.html">Shiletha</a></li>
+       <li><a href="Nicholas.html">Nicholas</a></li>
+       <li><a href="Marquisha.html">Marquisha</a></li>
+       <li><a href="Markyia.html">Markyia</a></li>
 
-  <h3>About Me</h3>
+
+       <div>
+     <center>
 
 
-    </menu>
-    <p>Mardrika Webster is currently enrolled as a senior at Mercer University. After serving seven years in the United States Army, she developed a passion for helping servicemen and women.
 
-    <p></p>Mardrika is currently a full-time srudent, mother, and volunteer at a non-profit organization called Disabled American Veterans. Diasbled American Veterans <a href="https://www.dav.org/">DAV</a> provides an abundance of services and resources to veterans. Mardrika has helped over seventy-five veterans receive benefits during and proceeding military enlistment and obligations.
+</section></center>
 
-    <p></p>Mardrika is determined to expand her platform to educate eligible veterans on available benefits, services, and programs. Mardrika is scheduled to graduate from Mercer University in Spring 2022 with a BS in Human Resource Administration and Devlopment.</p>
+<p><small>&copy; Mardrika Webster
+</small></p>
 
-    <h3>Labs</h3>
-    <ol>
-      <li>Lab 1: Multiple page website</li>
-      <li>Lab 2: Inserting multimedia/interactive components in a website</li>
-      <li>Lab 3: Applying form to a website</li>
-    </ol>
-    <h3>Practices</h3>
-    <ol>
-      <li>Practice 1</li>
-      <li>Practice 2</li>
-      <li>Practice 3</li>
-    </ol>
-    <h3>Business/organization website- team project</h3>
-
-    <li></li>
-
-  </body>
-</html>
+</div></body></html>
